# rustupolis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
docker/: Dockerfile  sshd_config
savegame/: save_layout.json
src/: lib.rs  main.rs
src/city_layout/: building_management.rs  mod.rs  save_manage.rs
src/engine/: core.rs  drawable.rs  keybinds.rs  layout.rs  mod.rs  test.rs  viewport.rs
src/initial_data/: layout.json  layout2.json  starting_core.json  starting_empty.json
src/logging/: mod.rs
src/population/: disease.rs  district.rs  dna.rs  mod.rs  people.rs
src/procedural_generation/: buildings.rs  mod.rs  roads.rs
src/roads/: mod.rs  road_graph.rs
src/simulation/: births.rs  deaths.rs  dna_transmission.rs  mod.rs  spawn_child.rs
src/terminal/: boxes.rs  lines.rs  mod.rs  screen.rs  text.rs
src/threads/: demo.rs  engine_loop.rs  mod.rs  sidebar.rs
src/ui/: bars.rs  bottombar.rs  colors.rs  mod.rs  sidebar.rs  topbar.rs
src/utils/: interruptible_sleep.rs  intersections.rs  mod.rs  pair.rs
website/: astro.config.mjs  package-lock.json  package.json
website/.astro/: settings.json
website/src/components/: Footer.astro  osCard.astro
website/src/components/homePage/: asciinema_presentation.astro  bat_info_presentation.astro  layout_presentation.astro  logs_presentation.astro  procedurale_gen.astro
website/src/layouts/: Layout.astro
website/src/pages/: downloads.astro  index.astro  index_.astro  team.astro
website/src/styles/: global.css
website/src/utils/: getLatestRelease.ts
