[package]
name = "rustupolis"
version = "1.2.0-dev"
edition = "2021"
default-run = "rustupolis"

[dependencies]
ctrlc = "3.4.5"
lazy_static = "1.5.0"
ansi_term = "0.12.1"
chrono = "0.4.39"
log = "0.4.26"
termion = "4.0.3"
users = "0.11.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
base64 = "0.22.1"
